# SB1

./: README.md
studybuddy-backend/: .env.example  .gitignore  .markdownlintrc  .pre-commit-config.yaml  CONTRIBUTING.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml
studybuddy-backend/.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
studybuddy-backend/.specify/memory/: constitution.md
studybuddy-backend/.specify/plans/: 001-studybuddy-platform-implementation.md
studybuddy-backend/.specify/specs/: 001-studybuddy-platform.md
studybuddy-backend/.specify/tasks/: 001-studybuddy-platform-tasks.md
studybuddy-backend/alembic/: env.py
studybuddy-backend/alembic/versions/: .gitkeep  6ff0160ab230_add_posts_reactions_comments.py  72402f0a7778_add_users_universities_verifications_.py  a4905d651abd_add_events_and_registrations.py  bb79c8436234_add_communities_and_memberships_tables.py  ebd7b4c4c70b_fix_is_pinned_column_type_to_boolean.py
studybuddy-backend/app/: __init__.py  main.py
studybuddy-backend/app/api/: __init__.py
studybuddy-backend/app/api/v1/: __init__.py  router.py
studybuddy-backend/app/api/websocket/: __init__.py
studybuddy-backend/app/application/: __init__.py
studybuddy-backend/app/application/interfaces/: __init__.py  comment_repository.py  community_repository.py  event_registration_repository.py  event_repository.py  membership_repository.py  post_repository.py  reaction_repository.py  university_repository.py  user_repository.py  verification_repository.py
studybuddy-backend/app/application/schemas/: __init__.py  auth.py  comment.py  common.py  community.py  event.py  membership.py  post.py  reaction.py  user.py  verification.py
studybuddy-backend/app/application/services/: __init__.py  auth_service.py  community_service.py  event_service.py  post_service.py  user_service.py  verification_service.py
studybuddy-backend/app/core/: config.py  exceptions.py  logging.py  security.py
studybuddy-backend/app/domain/: __init__.py
studybuddy-backend/app/domain/entities/: __init__.py
studybuddy-backend/app/domain/enums/: __init__.py  chat_type.py  community_type.py  community_visibility.py  event_status.py  event_type.py  membership_role.py  reaction_type.py  registration_status.py  user_role.py  verification_status.py
studybuddy-backend/app/domain/value_objects/: email.py  verification_token.py
studybuddy-backend/app/infrastructure/: __init__.py
studybuddy-backend/app/infrastructure/cache/: __init__.py  cache_service.py  redis_client.py
studybuddy-backend/app/infrastructure/database/: __init__.py  base.py  session.py
studybuddy-backend/app/infrastructure/email/: __init__.py
studybuddy-backend/app/infrastructure/email_service/: base.py  smtp_email.py
studybuddy-backend/app/infrastructure/repositories/: __init__.py  comment_repository.py  community_repository.py  event_registration_repository.py  event_repository.py  membership_repository.py  post_repository.py  reaction_repository.py  university_repository.py  user_repository.py  verification_repository.py
studybuddy-backend/app/infrastructure/storage/: __init__.py  base.py  local_storage.py  s3_storage.py
studybuddy-backend/app/tasks/: __init__.py  analytics_tasks.py  celery_app.py  email_tasks.py  event_tasks.py
studybuddy-backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
studybuddy-backend/docs/: API.md
studybuddy-backend/kubernetes/: api-deployment.yaml  celery-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml.template
studybuddy-backend/scripts/: dev.sh  seed_data.py
studybuddy-backend/tests/: __init__.py  conftest.py
studybuddy-backend/tests/e2e/: __init__.py  test_community_creation_flow.py  test_direct_messaging_flow.py  test_event_registration_flow.py  test_post_creation_flow.py  test_registration_flow.py
studybuddy-backend/tests/factories/: README.md  __init__.py  chat_factory.py  community_factory.py  event_factory.py  message_factory.py  post_factory.py  user_factory.py  verification_factory.py
studybuddy-backend/tests/integration/: __init__.py  test_api_smoke.py  test_chat_endpoints.py  test_chat_websocket.py  test_direct_messaging_flow.py  test_endpoint_registration.py  test_full_api.py  test_real_integration.py
studybuddy-backend/tests/integration/api/: __init__.py  test_auth_endpoints.py  test_comment_endpoints.py  test_community_endpoints.py  test_event_endpoints.py  (+3 more)
studybuddy-backend/tests/unit/: __init__.py  test_main.py
studybuddy-backend/tests/websocket/: test_websocket_endpoint.py
(+88 files in other folders)
